# NFS-File-Server

./: .gitignore  README.md  build_all.sh  run_client.sh  run_client_tests.sh  run_server.sh
Message/: BytesConverter.h  ReplyInfo.h  test.cpp  test.h
Message/Replies/: CloseReply.cpp  CloseReply.h  ErrorReply.cpp  ErrorReply.h  FstatReply.cpp  LseekReply.cpp  LseekReply.h  OpenReply.cpp  ReadReply.cpp  ReadReply.h  ReplySorter.cpp  ReplySorter.h  UnlinkReply.cpp  UnlinkReply.h  WriteReply.h
Message/Requests/: ConnectRequest.cpp  FstatRequest.cpp  LseekRequest.h  OpenRequest.h  ReadRequest.cpp  RequestSorter.cpp  RequestSorter.h  WriteRequest.cpp  WriteRequest.h
client/: CMakeLists.txt  NFS_Client.cpp  NFS_Client.h  NFS_client.cpp  NFS_client.h  ReplyHandler.cpp  ReplyHandler.h  ReplySorter.cpp  ReplySorter.h  file.h  file_system_manager.cpp  file_system_manager.h  main.cpp  run.sh  socket.cpp  socket.h  storage.cpp  storage.h
client/tests/: tests.cpp  tests.h
client_test_program/: CMakeLists.txt  build.sh  main.cpp  read_and_write_test.cpp  read_and_write_test.h  test_fstat.cpp  test_fstat.h  test_lseek.cpp  test_lseek.h  test_open_close.cpp  test_open_close.h  test_read_and_write.cpp  test_read_and_write.h  tests.cpp  tests.h
message/: BytesConverter.cpp  BytesConverter.h  CMakeLists.txt  Message.cpp  Message.h  MessageTypes.h  RequestInfo.h  build.sh  bytes_converter.cpp  bytes_converter.h
message/Replies/: CloseReply.h  ConnectReply.cpp  ConnectReply.h  ErrorReply.h  FstatReply.h  LseekReply.h  OpenReply.h  Reply.cpp  Reply.h  WriteReply.cpp  WriteReply.h  reply.cpp  reply.h
message/Requests/: CloseRequest.cpp  CloseRequest.h  ConnectRequest.h  FstatRequest.h  LseekRequest.cpp  OpenRequest.cpp  OpenRequest.h  ReadRequest.h  Request.cpp  Request.h  UnlinkRequest.cpp  UnlinkRequest.h  WriteRequest.h  request.cpp  request.h
message/old/: Message.cpp  Message.h
message/replies/: reply.cpp  reply.h
message/requests/: request.cpp  request.h
server/: AccessManager.cpp  AccessManager.h  CMakeLists.txt  RequestHandler.cpp  RequestHandler.h  RequestSorter.cpp  RequestSorter.h  access_manager.cpp  access_manager.h  build.sh  logger.cpp  logger.h  main.cpp  request_handler.cpp  request_handler.h  run.sh  server_file.cpp  server_file.h  socket.cpp  socket.h
server/endpoints/: OpenFileHandler.cpp  OpenFileHandler.h  close_file_handler.cpp  close_file_handler.h  fstat_handler.cpp  fstat_handler.h  open_file_handler.cpp  open_file_handler.h  read_file_handler.cpp  read_file_handler.h  write_file_handler.cpp  write_file_handler.h
socket/: CMakeLists.txt  build.sh  socket.cpp  socket.h
